# do-verify

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml  cmake-single-platform.yml
benchmarks/: CMakeLists.txt  benchmark_engine.cpp  benchmark_interval_set.cpp
include/do-verify/: MTLEngine.hpp  binary_row_reader.hpp  interval_set.hpp  json_reader.hpp
src/: MTLEngine.cpp  binary_row_reader.cpp  interval_set.cpp  json_reader.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp  test_dense.cpp  test_discrete.cpp  test_interval_set.cpp  test_readers.cpp
